--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Apeperia</title>
     <link rel="stylesheet" href="@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap');
     ">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/chamada.css">
